--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ explore_images_0/
 milvus_demo.db
 explore.ipynb
 .milvus_demo.db.lock
-data/
+data/pdf/
+data/markdown/*/*.png
+*.db
 refer/
 __pycache__/
 *.pyc
