--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,16 @@ PyYAML
 Requests
 sentence_transformers
 SQLAlchemy
+numpy==1.26.4
 torch==2.2.2
 tqdm
 transformers
 
 # add manually
-llama-index-llms-huggingface
+llama-index-llms-ollama
 llama-index-postprocessor-flag-embedding-reranker
 llama-index-readers-file
 llama-index-readers-llama-parse
 llama-index-vector-stores-milvus
+llama-index-embeddings-huggingface
+uvicorn
